--- a/.gitattributes
+++ b/.gitattributes
@@ -1,2 +1,2 @@
 # Prevent that the main.ts file is recognised as Javascript because of the shebang:
-src/main.ts linguist-language=Typescript
+compiler/src/main.ts linguist-language=Typescript
