--- a/compiler/.eslintrc.json
+++ b/compiler/.eslintrc.json
@@ -5,7 +5,7 @@
         "node": true
     },
     "parserOptions": {
-        "project": "compiler/tsconfig.json",
+        "project": "./tsconfig.json",
         "sourceType": "module"
     },
     "extends": [
@@ -13,53 +13,6 @@
     ],
     "rules": {
         "@typescript-eslint/no-non-null-assertion": "off",
-        "@typescript-eslint/no-explicit-any": "off",
-        "@typescript-eslint/naming-convention": [
-            "error",
-            {
-                "selector": "default",
-                "format": ["camelCase"],
-                "leadingUnderscore": "forbid",
-                "trailingUnderscore": "forbid"
-            },
-            {
-                "selector": "class",
-                "format": ["PascalCase"],
-                "leadingUnderscore": "forbid",
-                "trailingUnderscore": "forbid"
-            },
-            {
-                "selector": "import",
-                "format": ["PascalCase", "camelCase"],
-                "leadingUnderscore": "forbid",
-                "trailingUnderscore": "forbid"
-            },
-            {
-                "selector": "parameter",
-                "modifiers": ["unused"],
-                "format": ["camelCase"],
-                "leadingUnderscore": "allow",
-                "trailingUnderscore": "forbid"
-            },
-            {
-                "selector": "classProperty",
-                "modifiers": ["private"],
-                "format": ["camelCase"],
-                "leadingUnderscore": "allow",
-                "trailingUnderscore": "forbid"
-            },
-            {
-                "selector": "typeLike",
-                "format": ["PascalCase"],
-                "leadingUnderscore": "forbid",
-                "trailingUnderscore": "forbid"
-            },
-            {
-                "selector": "enumMember",
-                "format": ["PascalCase"],
-                "leadingUnderscore": "forbid",
-                "trailingUnderscore": "forbid"
-            }
-        ]
+        "@typescript-eslint/no-explicit-any": "off"
     }
 }
